@@ -1,3 +1,7 @@
+Fri Oct 29 20:20:16 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* Makefile, fairy, conf.rb: FAIRY_HOMEを自動推測するようにした(REQ281対応)
+
 Fri Oct 29 18:32:21 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* sample/wordcount.rb: typo
